--- a/app/templates/app/tabela.html
+++ b/app/templates/app/tabela.html
@@ -41,7 +41,7 @@
                         <td>28/11/2023</td>
                         <td>104</td>
                         <td></td>
-                        <td>Concluido</td>
+                        <td>Concluído</td>
                       </tr>
                       <tr>
                         <td>Anaise</td>
