--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -43,5 +43,6 @@
   
   {% endblock container %}
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
